--- a/extractdata.ipynb
+++ b/extractdata.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "78bb0041",
    "metadata": {},
    "outputs": [],
@@ -22,47 +22,46 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from selenium.webdriver.chrome.options import Options\n",
     "from datetime import datetime, timedelta\n",
-    "import time\n",
     "from urllib.parse import urlparse, parse_qs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "2b4b8ed3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# service=Service(ChromeDriverManager().install())\n",
-    "driver = webdriver.Chrome()\n",
-    "base_url=\"https://jobvision.ir/jobs/category/data-science?page=\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6df9ccc3",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TimeoutException",
+     "evalue": "Message: \nStacktrace:\n\tGetHandleVerifier [0x00007FF6EADDEFA5+77893]\n\tGetHandleVerifier [0x00007FF6EADDF000+77984]\n\t(No symbol) [0x00007FF6EABA91BA]\n\t(No symbol) [0x00007FF6EABFF16D]\n\t(No symbol) [0x00007FF6EABFF41C]\n\t(No symbol) [0x00007FF6EAC52237]\n\t(No symbol) [0x00007FF6EAC2716F]\n\t(No symbol) [0x00007FF6EAC4F07F]\n\t(No symbol) [0x00007FF6EAC26F03]\n\t(No symbol) [0x00007FF6EABF0328]\n\t(No symbol) [0x00007FF6EABF1093]\n\tGetHandleVerifier [0x00007FF6EB097B6D+2931725]\n\tGetHandleVerifier [0x00007FF6EB092132+2908626]\n\tGetHandleVerifier [0x00007FF6EB0B00F3+3031443]\n\tGetHandleVerifier [0x00007FF6EADF91EA+184970]\n\tGetHandleVerifier [0x00007FF6EAE0086F+215311]\n\tGetHandleVerifier [0x00007FF6EADE6EC4+110436]\n\tGetHandleVerifier [0x00007FF6EADE7072+110866]\n\tGetHandleVerifier [0x00007FF6EADCD479+5401]\n\tBaseThreadInitThunk [0x00007FFB3F1A6FD4+20]\n\tRtlUserThreadStart [0x00007FFB40F7CEC1+33]\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTimeoutException\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 78\u001b[0m\n\u001b[0;32m     74\u001b[0m \u001b[38;5;66;03m# Go to any of the job position\u001b[39;00m\n\u001b[0;32m     76\u001b[0m title\u001b[38;5;241m.\u001b[39mclick()\n\u001b[1;32m---> 78\u001b[0m get_job_section \u001b[38;5;241m=\u001b[39m \u001b[43mWebDriverWait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdriver\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43muntil\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     79\u001b[0m \u001b[43m    \u001b[49m\u001b[43mEC\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvisibility_of_element_located\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTAG_NAME\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mapp-job-specification\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     80\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     82\u001b[0m job_info_list \u001b[38;5;241m=\u001b[39m get_job_section\u001b[38;5;241m.\u001b[39mfind_elements(By\u001b[38;5;241m.\u001b[39mCLASS_NAME, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext-muted\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     83\u001b[0m working_hours, type_of_cooperation \u001b[38;5;241m=\u001b[39m job_info_list[:\u001b[38;5;241m2\u001b[39m]\n",
+      "File \u001b[1;32mc:\\Users\\rezaze\\anaconda3\\envs\\rezaze\\Lib\\site-packages\\selenium\\webdriver\\support\\wait.py:146\u001b[0m, in \u001b[0;36mWebDriverWait.until\u001b[1;34m(self, method, message)\u001b[0m\n\u001b[0;32m    144\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m    145\u001b[0m     time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_poll)\n\u001b[1;32m--> 146\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m TimeoutException(message, screen, stacktrace)\n",
+      "\u001b[1;31mTimeoutException\u001b[0m: Message: \nStacktrace:\n\tGetHandleVerifier [0x00007FF6EADDEFA5+77893]\n\tGetHandleVerifier [0x00007FF6EADDF000+77984]\n\t(No symbol) [0x00007FF6EABA91BA]\n\t(No symbol) [0x00007FF6EABFF16D]\n\t(No symbol) [0x00007FF6EABFF41C]\n\t(No symbol) [0x00007FF6EAC52237]\n\t(No symbol) [0x00007FF6EAC2716F]\n\t(No symbol) [0x00007FF6EAC4F07F]\n\t(No symbol) [0x00007FF6EAC26F03]\n\t(No symbol) [0x00007FF6EABF0328]\n\t(No symbol) [0x00007FF6EABF1093]\n\tGetHandleVerifier [0x00007FF6EB097B6D+2931725]\n\tGetHandleVerifier [0x00007FF6EB092132+2908626]\n\tGetHandleVerifier [0x00007FF6EB0B00F3+3031443]\n\tGetHandleVerifier [0x00007FF6EADF91EA+184970]\n\tGetHandleVerifier [0x00007FF6EAE0086F+215311]\n\tGetHandleVerifier [0x00007FF6EADE6EC4+110436]\n\tGetHandleVerifier [0x00007FF6EADE7072+110866]\n\tGetHandleVerifier [0x00007FF6EADCD479+5401]\n\tBaseThreadInitThunk [0x00007FFB3F1A6FD4+20]\n\tRtlUserThreadStart [0x00007FFB40F7CEC1+33]\n"
+     ]
     }
    ],
    "source": [
+    "options = Options()\n",
+    "options.add_argument(\"--headless=new\") \n",
+    "options.add_argument(\"--disable-gpu\")\n",
+    "options.add_argument(\"--no-sandbox\")\n",
+    "options.add_argument(\"--disable-dev-shm-usage\")\n",
+    "\n",
+    "driver = webdriver.Chrome(options=options)\n",
+    "base_url=\"https://jobvision.ir/jobs?page=\"\n",
+    "\n",
     "jobs_list = []\n",
     "now = datetime.now()\n",
     "\n",
     "driver.get(base_url + \"1\")\n",
     "\n",
-    "pages_btn = WebDriverWait(driver, 10).until(\n",
+    "pages_btn = WebDriverWait(driver, 15).until(\n",
     "        EC.visibility_of_element_located((By.CLASS_NAME, \"pagination\"))\n",
     "    )\n",
     "\n",
@@ -81,7 +80,7 @@
     "    url = base_url + str(page)\n",
     "    driver.get(url)\n",
     "\n",
-    "    jobs = WebDriverWait(driver, 10).until(\n",
+    "    jobs = WebDriverWait(driver, 15).until(\n",
     "        EC.visibility_of_element_located((By.TAG_NAME, \"job-card-list\"))\n",
     "    )\n",
     "\n",
@@ -113,7 +112,7 @@
     "            salary = salary.text\n",
     "        else:\n",
     "            region = job_info_list[0]\n",
-    "            salary = \"an argumant\"\n",
+    "            salary = \"\"\n",
     "\n",
     "        extractec_num = \"\".join(filter(lambda x: x.isnumeric(), shipping_time.text))\n",
     "        if extractec_num != \"\":\n",
@@ -152,18 +151,19 @@
     "        )\n",
     "\n",
     "\n",
+    "driver.quit()\n",
+    "\n",
     "df = pd.DataFrame(jobs_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b03ce325",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_copy = df\n",
-    "\n",
     "\n",
     "df_copy.to_csv('job_data_optimized.csv', index=False)"
    ]
