--- a/extractdata.ipynb
+++ b/extractdata.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "78bb0041",
    "metadata": {},
    "outputs": [],
@@ -28,144 +28,195 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d0151ab9",
+   "metadata": {},
+   "source": [
+    "functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
+   "id": "79632f33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_info_from_site(pages, base_url, driver, start_from=1):\n",
+    "    jobs_list = []\n",
+    "    now = datetime.now()\n",
+    "    empty_value_count = 0\n",
+    "    for page in range(start_from, pages + 1):\n",
+    "        try:\n",
+    "            url = base_url + str(page)\n",
+    "            driver.get(url)\n",
+    "\n",
+    "            jobs = WebDriverWait(driver, 15).until(\n",
+    "                EC.visibility_of_element_located((By.TAG_NAME, \"job-card-list\"))\n",
+    "            )\n",
+    "\n",
+    "            jobs_element_list = jobs.find_elements(By.TAG_NAME, \"job-card\")\n",
+    "\n",
+    "            try:\n",
+    "                for job in jobs_element_list:\n",
+    "\n",
+    "                    # Get information about job postings from post\n",
+    "\n",
+    "                    title = job.find_element(By.CLASS_NAME, \"job-card-title\")\n",
+    "\n",
+    "                    parent = title.find_element(By.XPATH, \"..\")\n",
+    "                    childs_list = parent.find_elements(By.XPATH, \"./*\")\n",
+    "\n",
+    "                    company = childs_list[1]\n",
+    "\n",
+    "                    job_info_element = childs_list[2]\n",
+    "\n",
+    "                    if len(childs_list) == 5:\n",
+    "                        facility = childs_list[3].text\n",
+    "                    else:\n",
+    "                        facility = \"\"\n",
+    "                    shipping_time = childs_list[-1]\n",
+    "\n",
+    "                    job_info_list = job_info_element.find_elements(By.TAG_NAME, \"span\")\n",
+    "\n",
+    "                    if len(job_info_list) == 3:\n",
+    "                        region, _, salary = job_info_list\n",
+    "                        salary = salary.text\n",
+    "                    else:\n",
+    "                        region = job_info_list[0]\n",
+    "                        salary = \"\"\n",
+    "\n",
+    "                    extractec_num = \"\".join(\n",
+    "                        filter(lambda x: x.isnumeric(), shipping_time.text)\n",
+    "                    )\n",
+    "                    if extractec_num != \"\":\n",
+    "                        release_time = now - timedelta(days=int(extractec_num))\n",
+    "                    else:\n",
+    "                        release_time = now - timedelta(days=0)\n",
+    "\n",
+    "                    # Go to any of the job position\n",
+    "\n",
+    "                    title.click()\n",
+    "\n",
+    "                    get_job_section = WebDriverWait(driver, 10).until(\n",
+    "                        EC.visibility_of_element_located(\n",
+    "                            (By.TAG_NAME, \"app-job-specification\")\n",
+    "                        )\n",
+    "                    )\n",
+    "\n",
+    "                    job_info_list = get_job_section.find_elements(\n",
+    "                        By.CLASS_NAME, \"text-muted\"\n",
+    "                    )\n",
+    "                    working_hours, type_of_cooperation = job_info_list[:2]\n",
+    "                    try:\n",
+    "                        requirement_list = get_job_section.find_elements(\n",
+    "                            By.TAG_NAME, \"app-tag\"\n",
+    "                        )\n",
+    "                        requirement_software_list = [i.text for i in requirement_list]\n",
+    "                    except:\n",
+    "                        requirement_software_list = []\n",
+    "\n",
+    "                    jobs_list.append(\n",
+    "                        {\n",
+    "                            \"shippingDate\": release_time.date(),\n",
+    "                            \"title\": title.text,\n",
+    "                            \"company\": company.text,\n",
+    "                            \"salary\": salary,\n",
+    "                            \"province\": region.text,\n",
+    "                            \"workingHours\": working_hours.text,\n",
+    "                            \"typeOfCooperation\": type_of_cooperation.text,\n",
+    "                            \"facility\": facility,\n",
+    "                            \"tagList\": requirement_software_list,\n",
+    "                        }\n",
+    "                    )\n",
+    "            except ValueError as e:\n",
+    "                jobs_list.append(\n",
+    "                    {\n",
+    "                        \"shippingDate\": \"\",\n",
+    "                        \"title\": \"\",\n",
+    "                        \"company\": \"\",\n",
+    "                        \"salary\": \"\",\n",
+    "                        \"province\": \"\",\n",
+    "                        \"workingHours\": \"\",\n",
+    "                        \"typeOfCooperation\": \"\",\n",
+    "                        \"facility\": \"\",\n",
+    "                        \"tagList\": \"\",\n",
+    "                    }\n",
+    "                )\n",
+    "                empty_value = empty_value + 1\n",
+    "                if empty_value_count == 8000:\n",
+    "                    print(e)\n",
+    "\n",
+    "        except:\n",
+    "            current_url = driver.current_url\n",
+    "            parsed_url = urlparse(current_url)\n",
+    "            query_params = parse_qs(parsed_url.query)\n",
+    "            current_page = int(query_params.get(\"page\")[0])\n",
+    "            get_info_from_site(current_url, base_url, driver, current_page)\n",
+    "\n",
+    "    return jobs_list\n",
+    "\n",
+    "\n",
+    "def find_last_page(base_url, driver):\n",
+    "    driver.get(base_url + \"1\")\n",
+    "\n",
+    "    last_page = WebDriverWait(driver, 10).until(\n",
+    "        EC.visibility_of_element_located((By.CLASS_NAME, \"pagination-last\"))\n",
+    "    )\n",
+    "\n",
+    "    last_page.click()\n",
+    "\n",
+    "    current_url = driver.current_url\n",
+    "    parsed_url = urlparse(current_url)\n",
+    "    query_params = parse_qs(parsed_url.query)\n",
+    "    pages = int(query_params.get(\"page\")[0])\n",
+    "    return pages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6df9ccc3",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "آخرین\n"
+     ]
+    },
+    {
      "ename": "TimeoutException",
-     "evalue": "Message: \nStacktrace:\n\tGetHandleVerifier [0x00007FF6EADDEFA5+77893]\n\tGetHandleVerifier [0x00007FF6EADDF000+77984]\n\t(No symbol) [0x00007FF6EABA91BA]\n\t(No symbol) [0x00007FF6EABFF16D]\n\t(No symbol) [0x00007FF6EABFF41C]\n\t(No symbol) [0x00007FF6EAC52237]\n\t(No symbol) [0x00007FF6EAC2716F]\n\t(No symbol) [0x00007FF6EAC4F07F]\n\t(No symbol) [0x00007FF6EAC26F03]\n\t(No symbol) [0x00007FF6EABF0328]\n\t(No symbol) [0x00007FF6EABF1093]\n\tGetHandleVerifier [0x00007FF6EB097B6D+2931725]\n\tGetHandleVerifier [0x00007FF6EB092132+2908626]\n\tGetHandleVerifier [0x00007FF6EB0B00F3+3031443]\n\tGetHandleVerifier [0x00007FF6EADF91EA+184970]\n\tGetHandleVerifier [0x00007FF6EAE0086F+215311]\n\tGetHandleVerifier [0x00007FF6EADE6EC4+110436]\n\tGetHandleVerifier [0x00007FF6EADE7072+110866]\n\tGetHandleVerifier [0x00007FF6EADCD479+5401]\n\tBaseThreadInitThunk [0x00007FFB3F1A6FD4+20]\n\tRtlUserThreadStart [0x00007FFB40F7CEC1+33]\n",
+     "evalue": "Message: \n",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTimeoutException\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 78\u001b[0m\n\u001b[0;32m     74\u001b[0m \u001b[38;5;66;03m# Go to any of the job position\u001b[39;00m\n\u001b[0;32m     76\u001b[0m title\u001b[38;5;241m.\u001b[39mclick()\n\u001b[1;32m---> 78\u001b[0m get_job_section \u001b[38;5;241m=\u001b[39m \u001b[43mWebDriverWait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdriver\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43muntil\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     79\u001b[0m \u001b[43m    \u001b[49m\u001b[43mEC\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvisibility_of_element_located\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTAG_NAME\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mapp-job-specification\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     80\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     82\u001b[0m job_info_list \u001b[38;5;241m=\u001b[39m get_job_section\u001b[38;5;241m.\u001b[39mfind_elements(By\u001b[38;5;241m.\u001b[39mCLASS_NAME, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext-muted\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     83\u001b[0m working_hours, type_of_cooperation \u001b[38;5;241m=\u001b[39m job_info_list[:\u001b[38;5;241m2\u001b[39m]\n",
+      "Cell \u001b[1;32mIn[11], line 33\u001b[0m\n\u001b[0;32m     30\u001b[0m url \u001b[38;5;241m=\u001b[39m base_url \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(page)\n\u001b[0;32m     31\u001b[0m driver\u001b[38;5;241m.\u001b[39mget(url)\n\u001b[1;32m---> 33\u001b[0m jobs \u001b[38;5;241m=\u001b[39m \u001b[43mWebDriverWait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdriver\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m15\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43muntil\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     34\u001b[0m \u001b[43m    \u001b[49m\u001b[43mEC\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvisibility_of_element_located\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTAG_NAME\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mjob-card-list\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     35\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     37\u001b[0m jobs_element_list \u001b[38;5;241m=\u001b[39m jobs\u001b[38;5;241m.\u001b[39mfind_elements(By\u001b[38;5;241m.\u001b[39mTAG_NAME, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mjob-card\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n",
       "File \u001b[1;32mc:\\Users\\rezaze\\anaconda3\\envs\\rezaze\\Lib\\site-packages\\selenium\\webdriver\\support\\wait.py:146\u001b[0m, in \u001b[0;36mWebDriverWait.until\u001b[1;34m(self, method, message)\u001b[0m\n\u001b[0;32m    144\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m    145\u001b[0m     time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_poll)\n\u001b[1;32m--> 146\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m TimeoutException(message, screen, stacktrace)\n",
-      "\u001b[1;31mTimeoutException\u001b[0m: Message: \nStacktrace:\n\tGetHandleVerifier [0x00007FF6EADDEFA5+77893]\n\tGetHandleVerifier [0x00007FF6EADDF000+77984]\n\t(No symbol) [0x00007FF6EABA91BA]\n\t(No symbol) [0x00007FF6EABFF16D]\n\t(No symbol) [0x00007FF6EABFF41C]\n\t(No symbol) [0x00007FF6EAC52237]\n\t(No symbol) [0x00007FF6EAC2716F]\n\t(No symbol) [0x00007FF6EAC4F07F]\n\t(No symbol) [0x00007FF6EAC26F03]\n\t(No symbol) [0x00007FF6EABF0328]\n\t(No symbol) [0x00007FF6EABF1093]\n\tGetHandleVerifier [0x00007FF6EB097B6D+2931725]\n\tGetHandleVerifier [0x00007FF6EB092132+2908626]\n\tGetHandleVerifier [0x00007FF6EB0B00F3+3031443]\n\tGetHandleVerifier [0x00007FF6EADF91EA+184970]\n\tGetHandleVerifier [0x00007FF6EAE0086F+215311]\n\tGetHandleVerifier [0x00007FF6EADE6EC4+110436]\n\tGetHandleVerifier [0x00007FF6EADE7072+110866]\n\tGetHandleVerifier [0x00007FF6EADCD479+5401]\n\tBaseThreadInitThunk [0x00007FFB3F1A6FD4+20]\n\tRtlUserThreadStart [0x00007FFB40F7CEC1+33]\n"
+      "\u001b[1;31mTimeoutException\u001b[0m: Message: \n"
      ]
     }
    ],
    "source": [
     "options = Options()\n",
-    "options.add_argument(\"--headless=new\") \n",
+    "options.add_argument(\"--headless=new\")\n",
     "options.add_argument(\"--disable-gpu\")\n",
     "options.add_argument(\"--no-sandbox\")\n",
     "options.add_argument(\"--disable-dev-shm-usage\")\n",
-    "\n",
     "driver = webdriver.Chrome(options=options)\n",
-    "base_url=\"https://jobvision.ir/jobs?page=\"\n",
+    "base_url = \"https://jobvision.ir/jobs?page=\"\n",
     "\n",
-    "jobs_list = []\n",
-    "now = datetime.now()\n",
+    "pages = find_last_page(base_url, driver)\n",
     "\n",
-    "driver.get(base_url + \"1\")\n",
-    "\n",
-    "pages_btn = WebDriverWait(driver, 15).until(\n",
-    "        EC.visibility_of_element_located((By.CLASS_NAME, \"pagination\"))\n",
-    "    )\n",
-    "\n",
-    "btn_list = pages_btn.find_elements(By.XPATH, \"./*\")\n",
-    "last_page = btn_list[-1]\n",
-    "\n",
-    "last_page.click()\n",
-    "\n",
-    "current_url = driver.current_url\n",
-    "parsed_url = urlparse(current_url)\n",
-    "query_params = parse_qs(parsed_url.query)\n",
-    "pages = int(query_params.get('page')[0])\n",
-    "\n",
-    "\n",
-    "for page in range(1, pages + 1):\n",
-    "    url = base_url + str(page)\n",
-    "    driver.get(url)\n",
-    "\n",
-    "    jobs = WebDriverWait(driver, 15).until(\n",
-    "        EC.visibility_of_element_located((By.TAG_NAME, \"job-card-list\"))\n",
-    "    )\n",
-    "\n",
-    "    jobs_element_list = jobs.find_elements(By.TAG_NAME, \"job-card\")\n",
-    "\n",
-    "    for job in jobs_element_list:\n",
-    "\n",
-    "        # Get information about job postings from post\n",
-    "\n",
-    "        title = job.find_element(By.CLASS_NAME, \"job-card-title\")\n",
-    "\n",
-    "        parent = title.find_element(By.XPATH, \"..\")\n",
-    "        childs_list = parent.find_elements(By.XPATH, \"./*\")\n",
-    "\n",
-    "        company = childs_list[1]\n",
-    "\n",
-    "        job_info_element = childs_list[2]\n",
-    "\n",
-    "        if len(childs_list) == 5:\n",
-    "            facility = childs_list[3].text\n",
-    "        else:\n",
-    "            facility = \"\"\n",
-    "        shipping_time = childs_list[-1]\n",
-    "\n",
-    "        job_info_list = job_info_element.find_elements(By.TAG_NAME, \"span\")\n",
-    "\n",
-    "        if len(job_info_list) == 3:\n",
-    "            region, _, salary = job_info_list\n",
-    "            salary = salary.text\n",
-    "        else:\n",
-    "            region = job_info_list[0]\n",
-    "            salary = \"\"\n",
-    "\n",
-    "        extractec_num = \"\".join(filter(lambda x: x.isnumeric(), shipping_time.text))\n",
-    "        if extractec_num != \"\":\n",
-    "            release_time = now - timedelta(days=int(extractec_num))\n",
-    "        else:\n",
-    "            release_time = now - timedelta(days=0)\n",
-    "\n",
-    "        # Go to any of the job position\n",
-    "\n",
-    "        title.click()\n",
-    "\n",
-    "        get_job_section = WebDriverWait(driver, 10).until(\n",
-    "            EC.visibility_of_element_located((By.TAG_NAME, \"app-job-specification\"))\n",
-    "        )\n",
-    "\n",
-    "        job_info_list = get_job_section.find_elements(By.CLASS_NAME, \"text-muted\")\n",
-    "        working_hours, type_of_cooperation = job_info_list[:2]\n",
-    "        try:\n",
-    "            requirement_list = get_job_section.find_elements(By.TAG_NAME, \"app-tag\")\n",
-    "            requirement_software_list = [i.text for i in requirement_list]\n",
-    "        except:\n",
-    "            requirement_software_list = []\n",
-    "\n",
-    "        jobs_list.append(\n",
-    "            {\n",
-    "                \"shippingDate\": release_time.date(),\n",
-    "                \"title\": title.text,\n",
-    "                \"company\": company.text,\n",
-    "                \"salary\": salary,\n",
-    "                \"province\": region.text,\n",
-    "                \"workingHours\": working_hours.text,\n",
-    "                \"typeOfCooperation\": type_of_cooperation.text,\n",
-    "                \"facility\": facility,\n",
-    "                \"tagList\": requirement_software_list,\n",
-    "            }\n",
-    "        )\n",
-    "\n",
+    "jobs_list = get_info_from_site(pages, base_url, driver)\n",
     "\n",
     "driver.quit()\n",
     "\n",
-    "df = pd.DataFrame(jobs_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "b03ce325",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_copy = df\n",
+    "df = pd.DataFrame(jobs_list)\n",
     "\n",
-    "df_copy.to_csv('job_data_optimized.csv', index=False)"
+    "df.to_csv(\"job_data_optimized.csv\", index=False)"
    ]
   }
  ],
