--- a/extractdata.ipynb
+++ b/extractdata.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "78bb0041",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "79632f33",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6df9ccc3",
    "metadata": {},
    "outputs": [
@@ -183,25 +183,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "آخرین\n"
-     ]
-    },
-    {
-     "ename": "TimeoutException",
-     "evalue": "Message: \n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTimeoutException\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 33\u001b[0m\n\u001b[0;32m     30\u001b[0m url \u001b[38;5;241m=\u001b[39m base_url \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(page)\n\u001b[0;32m     31\u001b[0m driver\u001b[38;5;241m.\u001b[39mget(url)\n\u001b[1;32m---> 33\u001b[0m jobs \u001b[38;5;241m=\u001b[39m \u001b[43mWebDriverWait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdriver\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m15\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43muntil\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     34\u001b[0m \u001b[43m    \u001b[49m\u001b[43mEC\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvisibility_of_element_located\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTAG_NAME\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mjob-card-list\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     35\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     37\u001b[0m jobs_element_list \u001b[38;5;241m=\u001b[39m jobs\u001b[38;5;241m.\u001b[39mfind_elements(By\u001b[38;5;241m.\u001b[39mTAG_NAME, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mjob-card\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n",
-      "File \u001b[1;32mc:\\Users\\rezaze\\anaconda3\\envs\\rezaze\\Lib\\site-packages\\selenium\\webdriver\\support\\wait.py:146\u001b[0m, in \u001b[0;36mWebDriverWait.until\u001b[1;34m(self, method, message)\u001b[0m\n\u001b[0;32m    144\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m    145\u001b[0m     time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_poll)\n\u001b[1;32m--> 146\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m TimeoutException(message, screen, stacktrace)\n",
-      "\u001b[1;31mTimeoutException\u001b[0m: Message: \n"
+      "1662\n"
      ]
     }
    ],
    "source": [
     "options = Options()\n",
-    "options.add_argument(\"--headless=new\")\n",
+    "# options.add_argument(\"--headless=new\")\n",
     "options.add_argument(\"--disable-gpu\")\n",
     "options.add_argument(\"--no-sandbox\")\n",
     "options.add_argument(\"--disable-dev-shm-usage\")\n",
@@ -210,13 +198,36 @@
     "\n",
     "pages = find_last_page(base_url, driver)\n",
     "\n",
-    "jobs_list = get_info_from_site(pages, base_url, driver)\n",
+    "print(pages)\n",
+    "\n",
+    "# jobs_list = get_info_from_site(pages, base_url, driver)\n",
     "\n",
     "driver.quit()\n",
     "\n",
-    "df = pd.DataFrame(jobs_list)\n",
+    "# df = pd.DataFrame(jobs_list)\n",
     "\n",
-    "df.to_csv(\"job_data_optimized.csv\", index=False)"
+    "# df.to_csv(\"job_data_optimized.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3ed005f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "166.2"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pages/10"
    ]
   }
  ],
